--- a/testing.ipynb
+++ b/testing.ipynb
@@ -37,9 +37,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MoonBoardRoute(mid_holds=[MoonBoardHold(row=9, col=2), MoonBoardHold(row=9, col=1)], start_holds=[MoonBoardHold(row=1, col=10)], end_holds=[MoonBoardHold(row=17, col=9)], id=UUID('a957e71d-53ae-11ed-a652-2593e1076388'))\n",
-      "[1, 21, -1, 1, 196, -1, 2, 101, 100, -1, -1, -1, -1, -1, -1, -1, -1]\n",
-      "MoonBoardRoute(mid_holds=[101, 100], start_holds=[21], end_holds=[196], id=UUID('a957e71e-53ae-11ed-a652-2593e1076388'))\n",
+      "MoonBoardRoute(mid_holds=[MoonBoardHold(row=9, col=3), MoonBoardHold(row=1, col=2), MoonBoardHold(row=8, col=5), MoonBoardHold(row=7, col=0), MoonBoardHold(row=5, col=0), MoonBoardHold(row=11, col=4), MoonBoardHold(row=15, col=8)], start_holds=[MoonBoardHold(row=0, col=2)], end_holds=[MoonBoardHold(row=17, col=4)], id=UUID('f0d8da60-53ae-11ed-a652-2593e1076388'))\n",
+      "[1, 2, -1, 1, 191, -1, 7, 102, 13, 93, 77, 55, 125, 173, -1, -1, -1]\n",
+      "MoonBoardRoute(mid_holds=[MoonBoardHold(row=9, col=3), MoonBoardHold(row=1, col=2), MoonBoardHold(row=8, col=5), MoonBoardHold(row=7, col=0), MoonBoardHold(row=5, col=0), MoonBoardHold(row=11, col=4), MoonBoardHold(row=15, col=8)], start_holds=[MoonBoardHold(row=0, col=2)], end_holds=[MoonBoardHold(row=17, col=4)], id=UUID('f0d8da61-53ae-11ed-a652-2593e1076388'))\n",
       "False\n"
      ]
     }
