start cont -> discrete

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -53,49 +53,348 @@
     "deparasm = ME_params_to_route(params)\n",
     "print(rand_route)\n",
     "print(params)\n",
-    "print(deparasm)\n",
-    "print(deparasm == rand_route)"
+    "print(deparasm)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n"
+      "(9, 3)\n",
+      "(9, 2)\n",
+      "(0, 1)\n",
+      "(6, 2)\n",
+      "(10, 14)\n",
+      "(3, 1)\n",
+      "(3, 0)\n",
+      "(0, 1)\n",
+      "(3, 1)\n",
+      "(1, 0)\n",
+      "(4, 4)\n",
+      "(8, 1)\n",
+      "(5, 0)\n",
+      "(5, 1)\n",
+      "(1, 13)\n",
+      "(5, 0)\n",
+      "(9, 0)\n",
+      "(10, 0)\n",
+      "(5, 0)\n",
+      "(0, 2)\n",
+      "(6, 0)\n",
+      "(9, 17)\n",
+      "(5, 3)\n",
+      "After Beamer search, the most possible hand sequence and the successRate:\n",
+      "['G6', 'G6', 'A10', 'C18']\n",
+      "[0, 0, 2, 4] ['LH', 'RH', 'LH', 'RH'] [0.00017535]\n",
+      "1/1 [==============================] - 3s 3s/step\n",
+      "(1, 0)\n",
+      "(6, 2)\n",
+      "(10, 0)\n",
+      "(0, 0)\n",
+      "(7, 1)\n",
+      "(8, 1)\n",
+      "(9, 3)\n",
+      "(10, 2)\n",
+      "(1, 1)\n",
+      "(3, 0)\n",
+      "(7, 1)\n",
+      "(9, 2)\n",
+      "(10, 3)\n",
+      "(7, 5)\n",
+      "(4, 2)\n",
+      "(4, 0)\n",
+      "(2, 2)\n",
+      "(1, 1)\n",
+      "(5, 3)\n",
+      "(10, 2)\n",
+      "(5, 0)\n",
+      "(2, 3)\n",
+      "(5.0, 17.0)\n",
+      "After Beamer search, the most possible hand sequence and the successRate:\n",
+      "['I4', 'I4', 'J9', 'I12', 'K16', 'B18']\n",
+      "[0, 0, 1, 2, 3, 4] ['LH', 'RH', 'RH', 'LH', 'RH', 'LH'] [0.0134713]\n",
+      "1/1 [==============================] - 0s 18ms/step\n",
+      "(6, 2)\n",
+      "(6, 2)\n",
+      "(6, 0)\n",
+      "(8, 2)\n",
+      "(4, 0)\n",
+      "(0, 5)\n",
+      "(7, 5)\n",
+      "(10, 2)\n",
+      "(2, 1)\n",
+      "(4, 1)\n",
+      "(4, 0)\n",
+      "(9, 3)\n",
+      "(2, 0)\n",
+      "(7, 1)\n",
+      "(5, 2)\n",
+      "(10, 0)\n",
+      "After Beamer search, the most possible hand sequence and the successRate:\n",
+      "['C5', 'C5', 'D8', 'F8', 'J13', 'D18']\n",
+      "[0, 0, 1, 2, 3, 4] ['LH', 'RH', 'RH', 'LH', 'RH', 'LH'] [0.06244502]\n",
+      "1/1 [==============================] - 0s 17ms/step\n",
+      "(7, 1)\n",
+      "(9, 2)\n",
+      "(0, 0)\n",
+      "(7, 3)\n",
+      "(8, 1)\n",
+      "(5, 0)\n",
+      "(5, 2)\n",
+      "(9, 14)\n",
+      "(0, 0)\n",
+      "(4, 3)\n",
+      "(6, 2)\n",
+      "(7, 1)\n",
+      "(0, 2)\n",
+      "(2, 3)\n",
+      "(4, 1)\n",
+      "After Beamer search, the most possible hand sequence and the successRate:\n",
+      "['H5', 'H5', 'H5', 'B3', 'G18']\n",
+      "[0, 0, 2, 1, 3] ['LH', 'RH', 'LH', 'LH', 'LH'] [1.3860991e-11]\n",
+      "1/1 [==============================] - 0s 21ms/step\n",
+      "(4, 4)\n",
+      "After Beamer search, the most possible hand sequence and the successRate:\n",
+      "['I5', 'I5', 'D13', 'I14', 'I18']\n",
+      "[0, 0, 2, 3, 4] ['LH', 'RH', 'LH', 'RH', 'LH'] [0.0105604]\n",
+      "1/1 [==============================] - 0s 17ms/step\n",
+      "(0, 3)\n",
+      "(4, 0)\n",
+      "(9, 3)\n",
+      "(8, 2)\n",
+      "(7, 2)\n",
+      "(0, 5)\n",
+      "(0, 0)\n",
+      "(0, 0)\n",
+      "(3, 1)\n",
+      "(7, 5)\n",
+      "(1, 0)\n",
+      "(10, 1)\n",
+      "(2, 1)\n",
+      "(1, 1)\n",
+      "(7, 0)\n",
+      "(0, 2)\n",
+      "(4, 4)\n",
+      "(2, 16)\n",
+      "(7, 1)\n",
+      "(3, 1)\n",
+      "(10, 1)\n",
+      "(9, 2)\n",
+      "(9, 17)\n",
+      "(2, 3)\n",
+      "(2, 2)\n",
+      "(4, 4)\n",
+      "(4, 1)\n",
+      "(9, 3)\n",
+      "(3, 0)\n",
+      "(7, 0)\n",
+      "(0, 2)\n",
+      "(10, 0)\n",
+      "(8, 2)\n",
+      "(7, 2)\n",
+      "(8, 0)\n",
+      "(8, 2)\n",
+      "(3, 0)\n",
+      "(3, 3)\n",
+      "(6, 2)\n",
+      "(7, 3)\n",
+      "(2, 3)\n",
+      "(7, 0)\n",
+      "(5, 2)\n",
+      "(7, 0)\n",
+      "After Beamer search, the most possible hand sequence and the successRate:\n",
+      "['E6', 'E6', 'J2', 'B7', 'A18', 'G18']\n",
+      "[0, 0, 1, 2, 3, 4] ['LH', 'RH', 'RH', 'RH', 'LH', 'RH'] [2.412297e-09]\n",
+      "1/1 [==============================] - 0s 17ms/step\n",
+      "(0, 1)\n",
+      "(7, 1)\n",
+      "(10, 2)\n",
+      "(10, 1)\n",
+      "(6, 0)\n",
+      "(4, 1)\n",
+      "(8, 0)\n",
+      "(7, 0)\n",
+      "(6, 2)\n",
+      "(5, 1)\n",
+      "After Beamer search, the most possible hand sequence and the successRate:\n",
+      "['B6', 'B6', 'G11', 'G14', 'I15', 'E18']\n",
+      "[0, 0, 1, 2, 3, 4] ['LH', 'RH', 'RH', 'LH', 'RH', 'LH'] [0.88991652]\n",
+      "1/1 [==============================] - 0s 16ms/step\n",
+      "After Beamer search, the most possible hand sequence and the successRate:\n",
+      "['B6', 'B6', 'C8', 'D10', 'I8', 'K10', 'K11', 'B18']\n",
+      "[0, 0, 1, 4, 2, 3, 5, 6] ['LH', 'RH', 'LH', 'RH', 'RH', 'LH', 'RH', 'LH'] [0.00045876]\n",
+      "1/1 [==============================] - 0s 18ms/step\n",
+      "(4, 2)\n",
+      "(7, 3)\n",
+      "(3, 3)\n",
+      "(0, 3)\n",
+      "(0, 0)\n",
+      "(5, 0)\n",
+      "(10, 3)\n",
+      "(10, 1)\n",
+      "(6, 4)\n",
+      "(8, 1)\n",
+      "(0, 1)\n",
+      "(1, 4)\n",
+      "(5, 2)\n",
+      "(2, 0)\n",
+      "(7, 0)\n",
+      "(8, 0)\n",
+      "(9, 17)\n",
+      "(10, 0)\n",
+      "(3, 0)\n",
+      "(0, 0)\n",
+      "(4, 2)\n",
+      "(6, 2)\n",
+      "(0, 5)\n",
+      "(10, 1)\n",
+      "(6, 0)\n",
+      "(8, 0)\n",
+      "(3, 0)\n",
+      "(0, 5)\n",
+      "(7, 1)\n",
+      "(3, 1)\n",
+      "(0, 1)\n",
+      "(1, 4)\n",
+      "(3, 3)\n",
+      "(7, 5)\n",
+      "After Beamer search, the most possible hand sequence and the successRate:\n",
+      "['D5', 'D5', 'B9', 'B11', 'A18']\n",
+      "[0, 0, 1, 2, 3] ['LH', 'RH', 'LH', 'RH', 'LH'] [0.01977399]\n",
+      "1/1 [==============================] - 0s 16ms/step\n",
+      "(9, 17)\n",
+      "(6, 4)\n",
+      "(8, 0)\n",
+      "(4, 1)\n",
+      "(9, 2)\n",
+      "After Beamer search, the most possible hand sequence and the successRate:\n",
+      "['D3', 'D3', 'B6', 'D7', 'E9', 'B10', 'G9', 'D5', 'D18', 'G18', 'A18']\n",
+      "[0, 0, 2, 3, 4, 6, 5, 1, 7, 8, 9] ['LH', 'RH', 'LH', 'RH', 'RH', 'LH', 'LH', 'LH', 'LH', 'RH', 'RH'] [0.01030961]\n",
+      "1/1 [==============================] - 0s 16ms/step\n",
+      "(0, 2)\n",
+      "After Beamer search, the most possible hand sequence and the successRate:\n",
+      "['J2', 'J2', 'J6', 'A10', 'A14', 'C18']\n",
+      "[0, 0, 1, 2, 4, 5] ['LH', 'RH', 'RH', 'LH', 'RH', 'LH'] [5.85109568e-05]\n",
+      "1/1 [==============================] - 0s 16ms/step\n",
+      "(9, 0)\n",
+      "(0, 0)\n",
+      "(1, 4)\n",
+      "(1, 13)\n",
+      "(0, 2)\n",
+      "(2, 2)\n",
+      "(3, 1)\n",
+      "(4, 1)\n",
+      "(4, 1)\n",
+      "(2, 2)\n",
+      "(2, 0)\n",
+      "(5, 3)\n",
+      "(0, 5)\n",
+      "(1, 1)\n",
+      "(3, 1)\n",
+      "(6, 4)\n",
+      "(5, 1)\n",
+      "(1, 4)\n",
+      "(0, 1)\n",
+      "After Beamer search, the most possible hand sequence and the successRate:\n",
+      "['B6', 'B6', 'D11', 'G15', 'I18']\n",
+      "[0, 0, 1, 2, 3] ['LH', 'RH', 'RH', 'LH', 'RH'] [0.09359086]\n",
+      "1/1 [==============================] - 0s 16ms/step\n",
+      "(4, 1)\n",
+      "(0, 1)\n",
+      "(10, 0)\n",
+      "(4, 1)\n",
+      "(7, 1)\n",
+      "(9, 17)\n",
+      "(1, 4)\n",
+      "(9, 2)\n",
+      "(7, 0)\n",
+      "(4, 0)\n",
+      "(6, 0)\n",
+      "(1, 4)\n",
+      "(4, 0)\n",
+      "(1, 4)\n",
+      "(10, 3)\n",
+      "(9, 0)\n",
+      "(1, 0)\n",
+      "(5, 1)\n",
+      "(7, 3)\n",
+      "(3, 3)\n",
+      "(3, 0)\n",
+      "(3, 1)\n",
+      "(8, 2)\n",
+      "(7, 1)\n",
+      "(0, 3)\n",
+      "(10, 0)\n",
+      "After Beamer search, the most possible hand sequence and the successRate:\n",
+      "['K6', 'K6', 'F11', 'H12', 'G18']\n",
+      "[0, 0, 3, 4, 5] ['LH', 'RH', 'LH', 'RH', 'LH'] [0.06719712]\n",
+      "1/1 [==============================] - 0s 16ms/step\n",
+      "(5, 1)\n",
+      "(4, 3)\n",
+      "(9, 2)\n",
+      "(0, 5)\n",
+      "After Beamer search, the most possible hand sequence and the successRate:\n",
+      "['I5', 'I5', 'J8', 'J10', 'H12', 'H12', 'E16', 'H18']\n",
+      "[0, 0, 2, 4, 5, 6, 7, 8] ['LH', 'RH', 'LH', 'RH', 'LH', 'RH', 'LH', 'RH'] [9.83400661]\n",
+      "1/1 [==============================] - 0s 17ms/step\n",
+      "MoonBoardRoute(mid_holds=[MoonBoardHold(row=11, col=7), MoonBoardHold(row=4, col=8), MoonBoardHold(row=9, col=1), MoonBoardHold(row=9, col=9), MoonBoardHold(row=15, col=4), MoonBoardHold(row=11, col=7), MoonBoardHold(row=7, col=9)], start_holds=[MoonBoardHold(row=4, col=8)], end_holds=[MoonBoardHold(row=17, col=7)], id=UUID('b5671c99-53c4-11ed-bf67-c569963c0459'))\n",
+      "Grade: V5\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-10-24 13:35:41.458481: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2022-10-24 13:35:41.458698: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2022-10-24 13:35:41.458776: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcublas.so.11'; dlerror: libcublas.so.11: cannot open shared object file: No such file or directory\n",
-      "2022-10-24 13:35:41.458842: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcublasLt.so.11'; dlerror: libcublasLt.so.11: cannot open shared object file: No such file or directory\n",
-      "2022-10-24 13:35:41.458903: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcufft.so.10'; dlerror: libcufft.so.10: cannot open shared object file: No such file or directory\n",
-      "2022-10-24 13:35:41.458965: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcurand.so.10'; dlerror: libcurand.so.10: cannot open shared object file: No such file or directory\n",
-      "2022-10-24 13:35:41.459027: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcusolver.so.11'; dlerror: libcusolver.so.11: cannot open shared object file: No such file or directory\n",
-      "2022-10-24 13:35:41.459088: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcusparse.so.11'; dlerror: libcusparse.so.11: cannot open shared object file: No such file or directory\n",
-      "2022-10-24 13:35:41.459148: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudnn.so.8'; dlerror: libcudnn.so.8: cannot open shared object file: No such file or directory\n",
-      "2022-10-24 13:35:41.459159: W tensorflow/core/common_runtime/gpu/gpu_device.cc:1934] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
-      "Skipping registering GPU devices...\n",
-      "2022-10-24 13:35:41.459901: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     "ename": "AttributeError",
+     "evalue": "module 'cbook' has no attribute 'get_sample_data'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [3], line 19\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[39mprint\u001b[39m(route)\n\u001b[1;32m     18\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mGrade: \u001b[39m\u001b[39m{\u001b[39;00mgrade\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n\u001b[0;32m---> 19\u001b[0m plot_problem(route\u001b[39m.\u001b[39;49mto_strings())\n",
+      "File \u001b[0;32m~/GeneticBoulders/MoonBoardRNN/plotting.py:5\u001b[0m, in \u001b[0;36mplot_problem\u001b[0;34m(stringList, title, key, save)\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mplot_problem\u001b[39m(stringList, title \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m, key \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m, save \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m):    \n\u001b[0;32m----> 5\u001b[0m     image_file \u001b[39m=\u001b[39m cbook\u001b[39m.\u001b[39;49mget_sample_data(\u001b[39m\"\u001b[39m\u001b[39mmoonboard2016Background.jpg\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      6\u001b[0m     plt\u001b[39m.\u001b[39mrcParams[\u001b[39m\"\u001b[39m\u001b[39mfigure.figsize\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m (\u001b[39m30\u001b[39m,\u001b[39m10\u001b[39m)\n\u001b[1;32m      7\u001b[0m     img \u001b[39m=\u001b[39m plt\u001b[39m.\u001b[39mimread(image_file)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'cbook' has no attribute 'get_sample_data'"
      ]
-    },
+    }
+   ],
+   "source": [
+    "# make a route with a grade?\n",
+    "from share.moonboard_util import MoonBoardRoute\n",
+    "from MoonBoardRNN.GradeNet.grade_net import GradeNet\n",
+    "from MoonBoardRNN.plotting import plot_problem\n",
+    "\n",
+    "TARGET = 'V5'\n",
+    "net = GradeNet()\n",
+    "while True:\n",
+    "    try:\n",
+    "        route = MoonBoardRoute.make_random_valid()\n",
+    "        grade = net.grade_route(route)\n",
+    "        if grade == TARGET:\n",
+    "            break\n",
+    "    except Exception as ex:\n",
+    "        print(ex)\n",
+    "\n",
+    "print(route)\n",
+    "print(f'Grade: {grade}')\n",
+    "plot_problem(route.to_strings())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "After Beamer search, the most possible hand sequence and the successRate:\n",
       "['F5', 'F5', 'C7', 'D9', 'B11', 'E13', 'B15', 'D18']\n",
       "[0, 0, 1, 2, 3, 4, 5, 7] ['LH', 'RH', 'LH', 'RH', 'LH', 'RH', 'LH', 'RH'] [83.49613078]\n",
-      "1/1 [==============================] - 3s 3s/step\n",
+      "1/1 [==============================] - 2s 2s/step\n",
       "V6\n"
      ]
     }
@@ -117,6 +416,18 @@
     "# x_vectors = route_to_x_vectors(route)\n",
     "net = GradeNet()\n",
     "grade = net.grade_route(route)\n",
+    "print(grade)\n",
+    "#print(x_vectors)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "oute(route)\n",
     "print(grade)\n",
     "#print(x_vectors)\n",
     "\n"
