guarded fitness function

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -9,14 +9,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-10-24 11:01:13.357074: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2022-10-25 09:34:37.779339: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2022-10-24 11:01:13.803942: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2022-10-24 11:01:13.804021: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
-      "2022-10-24 11:01:13.915624: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2022-10-24 11:01:15.511594: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
-      "2022-10-24 11:01:15.511662: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
-      "2022-10-24 11:01:15.511669: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
+      "2022-10-25 09:34:37.896746: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-10-25 09:34:37.896779: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
+      "2022-10-25 09:34:37.928623: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2022-10-25 09:34:38.787297: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
+      "2022-10-25 09:34:38.787409: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
+      "2022-10-25 09:34:38.787421: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
      ]
     }
    ],
@@ -30,17 +30,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MoonBoardRoute(mid_holds=[MoonBoardHold(row=9, col=3), MoonBoardHold(row=1, col=2), MoonBoardHold(row=8, col=5), MoonBoardHold(row=7, col=0), MoonBoardHold(row=5, col=0), MoonBoardHold(row=11, col=4), MoonBoardHold(row=15, col=8)], start_holds=[MoonBoardHold(row=0, col=2)], end_holds=[MoonBoardHold(row=17, col=4)], id=UUID('f0d8da60-53ae-11ed-a652-2593e1076388'))\n",
-      "[1, 2, -1, 1, 191, -1, 7, 102, 13, 93, 77, 55, 125, 173, -1, -1, -1]\n",
-      "MoonBoardRoute(mid_holds=[MoonBoardHold(row=9, col=3), MoonBoardHold(row=1, col=2), MoonBoardHold(row=8, col=5), MoonBoardHold(row=7, col=0), MoonBoardHold(row=5, col=0), MoonBoardHold(row=11, col=4), MoonBoardHold(row=15, col=8)], start_holds=[MoonBoardHold(row=0, col=2)], end_holds=[MoonBoardHold(row=17, col=4)], id=UUID('f0d8da61-53ae-11ed-a652-2593e1076388'))\n",
-      "False\n"
+      "MoonBoardRoute(mid_holds=[MoonBoardHold(row=10, col=1), MoonBoardHold(row=2, col=2), MoonBoardHold(row=5, col=2), MoonBoardHold(row=15, col=1)], start_holds=[MoonBoardHold(row=2, col=4)], end_holds=[MoonBoardHold(row=17, col=9)], id=UUID('c7adc072-5469-11ed-8826-b13708a5728f'))\n",
+      "[26, 196, 4, 111, 24, 57, 166, -1, -1, -1]\n",
+      "MoonBoardRoute(mid_holds=[MoonBoardHold(row=10, col=1), MoonBoardHold(row=2, col=2), MoonBoardHold(row=5, col=2), MoonBoardHold(row=15, col=1)], start_holds=MoonBoardHold(row=2, col=4), end_holds=MoonBoardHold(row=17, col=9), id=UUID('c7adc073-5469-11ed-8826-b13708a5728f'))\n"
      ]
     }
    ],
