rework visualization and logging

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -227,6 +227,19 @@
     "    plot_route(route)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from util import load_pickle\n",
+    "\n",
+    "path = '/home/daniel/GeneticBoulders/results/aggregate.p'\n",
+    "agg = load_pickle(path)\n",
+    "print('')"
+   ]
   }
  ],
  "metadata": {
