--- a/testing.ipynb
+++ b/testing.ipynb
@@ -230,9 +230,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'ExperimentAggregator' from 'MapElites.tracking' (/home/daniel/GeneticBoulders/MapElites/tracking.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [5], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mutil\u001b[39;00m \u001b[39mimport\u001b[39;00m load_pickle\n\u001b[0;32m----> 2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mMapElites\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mtracking\u001b[39;00m \u001b[39mimport\u001b[39;00m ExperimentAggregator\n\u001b[1;32m      4\u001b[0m path \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m/home/daniel/GeneticBoulders/results/aggregate.p\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m      5\u001b[0m agg \u001b[39m=\u001b[39m load_pickle(path)\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'ExperimentAggregator' from 'MapElites.tracking' (/home/daniel/GeneticBoulders/MapElites/tracking.py)"
+     ]
+    }
+   ],
    "source": [
     "from util import load_pickle\n",
     "\n",
