add save path to plot

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -230,26 +230,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'ExperimentAggregator' from 'MapElites.tracking' (/home/daniel/GeneticBoulders/MapElites/tracking.py)",
+     "ename": "AttributeError",
+     "evalue": "Can't get attribute 'ExperimentAggregator' on <module 'MapElites.tracking' from '/home/daniel/GeneticBoulders/MapElites/tracking.py'>",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [5], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mutil\u001b[39;00m \u001b[39mimport\u001b[39;00m load_pickle\n\u001b[0;32m----> 2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mMapElites\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mtracking\u001b[39;00m \u001b[39mimport\u001b[39;00m ExperimentAggregator\n\u001b[1;32m      4\u001b[0m path \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m/home/daniel/GeneticBoulders/results/aggregate.p\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m      5\u001b[0m agg \u001b[39m=\u001b[39m load_pickle(path)\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'ExperimentAggregator' from 'MapElites.tracking' (/home/daniel/GeneticBoulders/MapElites/tracking.py)"
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [6], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mutil\u001b[39;00m \u001b[39mimport\u001b[39;00m load_pickle\n\u001b[1;32m      3\u001b[0m path \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m/home/daniel/GeneticBoulders/results/big_run/aggregate.p\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m----> 4\u001b[0m agg \u001b[39m=\u001b[39m load_pickle(path)\n\u001b[1;32m      5\u001b[0m agg\u001b[39m.\u001b[39mplot_qd_score(\u001b[39m'\u001b[39m\u001b[39mhome/daniel/GeneticBoulders/results/big_run/qd_score.png\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      6\u001b[0m agg\u001b[39m.\u001b[39mplot_max_fitness(\u001b[39m'\u001b[39m\u001b[39mhome/daniel/GeneticBoulders/results/big_run/qd_score.png\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "File \u001b[0;32m~/GeneticBoulders/util.py:50\u001b[0m, in \u001b[0;36mload_pickle\u001b[0;34m(path)\u001b[0m\n\u001b[1;32m     48\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mload_pickle\u001b[39m(path):\n\u001b[1;32m     49\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(path, \u001b[39m'\u001b[39m\u001b[39mrb\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m f:\n\u001b[0;32m---> 50\u001b[0m         obj \u001b[39m=\u001b[39m pickle\u001b[39m.\u001b[39;49mload(f)\n\u001b[1;32m     51\u001b[0m     \u001b[39mreturn\u001b[39;00m obj\n",
+      "\u001b[0;31mAttributeError\u001b[0m: Can't get attribute 'ExperimentAggregator' on <module 'MapElites.tracking' from '/home/daniel/GeneticBoulders/MapElites/tracking.py'>"
      ]
     }
    ],
    "source": [
     "from util import load_pickle\n",
     "\n",
-    "path = '/home/daniel/GeneticBoulders/results/aggregate.p'\n",
+    "path = '/home/daniel/GeneticBoulders/results/big_run/aggregate.p'\n",
     "agg = load_pickle(path)\n",
+    "agg.plot_qd_score('home/daniel/GeneticBoulders/results/big_run/qd_score.png')\n",
+    "agg.plot_max_fitness('home/daniel/GeneticBoulders/results/big_run/qd_score.png')\n",
     "print('')"
    ]
   }
