survey resp dataclass

--- a/user_study/parse_results.ipynb
+++ b/user_study/parse_results.ipynb
@@ -22,78 +22,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 6\n",
-      "4\n",
-      "0\n",
-      "2\n",
-      "1\n",
-      "4\n",
-      "4\n",
-      "5\n",
-      "3\n",
-      "4\n",
-      "4\n",
-      "4\n",
-      "3\n",
-      "3\n",
-      "4\n",
-      "4\n",
-      "3\n",
-      "3\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "4\n",
-      "4\n",
-      "3\n",
-      "3\n",
-      "4\n",
-      "4\n",
-      "3\n",
-      "3\n",
-      "2\n",
-      "3\n",
-      "3\n",
-      "3\n",
-      "4\n",
-      "2\n",
-      "2\n",
-      "2\n",
-      "4\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "1\n",
-      "3\n",
-      "3\n",
-      "5\n",
-      "4\n",
-      "3\n",
-      "4\n",
-      "3\n",
-      "0\n",
-      "3\n",
-      "2\n",
-      "2\n",
-      "4\n",
-      "3\n",
-      "2\n",
-      "1\n",
-      "4\n",
-      "3\n",
-      "5\n",
-      "1\n",
-      "5\n",
-      "3\n",
-      "5\n",
-      "6\n"
+     "ename": "TypeError",
+     "evalue": "function() argument 'code' must be code, not str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mimage_link_mapping\u001b[39;00m \u001b[39mimport\u001b[39;00m IMAGE_LINKS\n\u001b[0;32m----> 2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mstructures\u001b[39;00m \u001b[39mimport\u001b[39;00m SurveyResponse\n\u001b[1;32m      3\u001b[0m path \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m/home/daniel/GeneticBoulders/user_study/Evolving MoonBoard Routes_February 20, 2023_20.45.csv\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m      4\u001b[0m valid_res \u001b[39m=\u001b[39m read_valid_results(path)\n",
+      "File \u001b[0;32m~/GeneticBoulders/user_study/structures.py:6\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtyping\u001b[39;00m \u001b[39mimport\u001b[39;00m Dict, List\n\u001b[1;32m      4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mimage_link_mapping\u001b[39;00m \u001b[39mimport\u001b[39;00m IMAGE_LINKS\n\u001b[0;32m----> 6\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mSurveyResponse\u001b[39;00m(dataclass):\n\u001b[1;32m      7\u001b[0m     calibrations: List[Dict[\u001b[39mstr\u001b[39m, \u001b[39mbool\u001b[39m]]\n\u001b[1;32m      8\u001b[0m     generated: List[Dict[\u001b[39mstr\u001b[39m, \u001b[39mbool\u001b[39m]]\n",
+      "\u001b[0;31mTypeError\u001b[0m: function() argument 'code' must be code, not str"
      ]
     }
    ],
@@ -102,10 +43,8 @@
     "path = '/home/daniel/GeneticBoulders/user_study/Evolving MoonBoard Routes_February 20, 2023_20.45.csv'\n",
     "valid_res = read_valid_results(path)\n",
     "calibration_indices = [i for i, v in enumerate(IMAGE_LINKS) if 'calibrate' in v]\n",
-    "for res in valid_res:\n",
-    "    for i in range(30):\n",
-    "        question = f'{i + 1}_Q10'\n",
-    "        grade = IMAGE_LINKS[i].split('_')[0]\n",
+    "\n",
+    "responses = [SurveyResponse(res) for res in valid_res]\n",
     "\n",
     "correct_calibrations = [0 for i in range(len(valid_res))]\n",
     "for index in calibration_indices:\n",
