update survey results parse

--- a/user_study/parse_results.ipynb
+++ b/user_study/parse_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,44 +22,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "function() argument 'code' must be code, not str",
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mimage_link_mapping\u001b[39;00m \u001b[39mimport\u001b[39;00m IMAGE_LINKS\n\u001b[0;32m----> 2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mstructures\u001b[39;00m \u001b[39mimport\u001b[39;00m SurveyResponse\n\u001b[1;32m      3\u001b[0m path \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m/home/daniel/GeneticBoulders/user_study/Evolving MoonBoard Routes_February 20, 2023_20.45.csv\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m      4\u001b[0m valid_res \u001b[39m=\u001b[39m read_valid_results(path)\n",
-      "File \u001b[0;32m~/GeneticBoulders/user_study/structures.py:6\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtyping\u001b[39;00m \u001b[39mimport\u001b[39;00m Dict, List\n\u001b[1;32m      4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mimage_link_mapping\u001b[39;00m \u001b[39mimport\u001b[39;00m IMAGE_LINKS\n\u001b[0;32m----> 6\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mSurveyResponse\u001b[39;00m(dataclass):\n\u001b[1;32m      7\u001b[0m     calibrations: List[Dict[\u001b[39mstr\u001b[39m, \u001b[39mbool\u001b[39m]]\n\u001b[1;32m      8\u001b[0m     generated: List[Dict[\u001b[39mstr\u001b[39m, \u001b[39mbool\u001b[39m]]\n",
-      "\u001b[0;31mTypeError\u001b[0m: function() argument 'code' must be code, not str"
+      "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [3], line 11\u001b[0m\n\u001b[1;32m      8\u001b[0m responses \u001b[39m=\u001b[39m [SurveyResponse(res) \u001b[39mfor\u001b[39;00m res \u001b[39min\u001b[39;00m valid_res]\n\u001b[1;32m     10\u001b[0m THRESHOLD \u001b[39m=\u001b[39m \u001b[39m0.5\u001b[39m\n\u001b[0;32m---> 11\u001b[0m reliable_responses \u001b[39m=\u001b[39m [r \u001b[39mfor\u001b[39;00m r \u001b[39min\u001b[39;00m responses \u001b[39mif\u001b[39;00m r\u001b[39m.\u001b[39mperc_calibrated_gradeable() \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m THRESHOLD]\n\u001b[1;32m     12\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mlen\u001b[39m(reliable_responses))\n\u001b[1;32m     13\u001b[0m percs \u001b[39m=\u001b[39m \u001b[39msorted\u001b[39m([r\u001b[39m.\u001b[39mperc_generated_gradeable() \u001b[39mfor\u001b[39;00m r \u001b[39min\u001b[39;00m reliable_responses], reverse\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
+      "Cell \u001b[0;32mIn [3], line 11\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      8\u001b[0m responses \u001b[39m=\u001b[39m [SurveyResponse(res) \u001b[39mfor\u001b[39;00m res \u001b[39min\u001b[39;00m valid_res]\n\u001b[1;32m     10\u001b[0m THRESHOLD \u001b[39m=\u001b[39m \u001b[39m0.5\u001b[39m\n\u001b[0;32m---> 11\u001b[0m reliable_responses \u001b[39m=\u001b[39m [r \u001b[39mfor\u001b[39;00m r \u001b[39min\u001b[39;00m responses \u001b[39mif\u001b[39;00m r\u001b[39m.\u001b[39;49mperc_calibrated_gradeable() \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m THRESHOLD]\n\u001b[1;32m     12\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mlen\u001b[39m(reliable_responses))\n\u001b[1;32m     13\u001b[0m percs \u001b[39m=\u001b[39m \u001b[39msorted\u001b[39m([r\u001b[39m.\u001b[39mperc_generated_gradeable() \u001b[39mfor\u001b[39;00m r \u001b[39min\u001b[39;00m reliable_responses], reverse\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
+      "File \u001b[0;32m~/GeneticBoulders/user_study/survey_response.py:48\u001b[0m, in \u001b[0;36mSurveyResponse.perc_calibrated_gradeable\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mperc_calibrated_gradeable\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[0;32m---> 48\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mperc_gradeable(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcalibrations)\n",
+      "File \u001b[0;32m~/GeneticBoulders/user_study/survey_response.py:45\u001b[0m, in \u001b[0;36mSurveyResponse.perc_gradeable\u001b[0;34m(self, ls)\u001b[0m\n\u001b[1;32m     43\u001b[0m valid \u001b[39m=\u001b[39m [c \u001b[39mfor\u001b[39;00m c \u001b[39min\u001b[39;00m ls \u001b[39mif\u001b[39;00m c[\u001b[39m0\u001b[39m] \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m top]\n\u001b[1;32m     44\u001b[0m correct \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcorrect_list(valid)\n\u001b[0;32m---> 45\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mlen\u001b[39;49m(correct) \u001b[39m/\u001b[39;49m \u001b[39mlen\u001b[39;49m(valid)\n",
+      "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
      ]
     }
    ],
    "source": [
+    "from statistics import mean\n",
     "from image_link_mapping import IMAGE_LINKS\n",
+    "from survey_response import SurveyResponse\n",
     "path = '/home/daniel/GeneticBoulders/user_study/Evolving MoonBoard Routes_February 20, 2023_20.45.csv'\n",
     "valid_res = read_valid_results(path)\n",
     "calibration_indices = [i for i, v in enumerate(IMAGE_LINKS) if 'calibrate' in v]\n",
     "\n",
     "responses = [SurveyResponse(res) for res in valid_res]\n",
     "\n",
-    "correct_calibrations = [0 for i in range(len(valid_res))]\n",
-    "for index in calibration_indices:\n",
-    "    grade = IMAGE_LINKS[index].split('_')[0]\n",
-    "    num = int(grade[1:])\n",
-    "    bot = max(4, num - 1)\n",
-    "    top = min(13, num + 1)\n",
-    "    question = f'{index + 1}_Q10'\n",
-    "    for i, resp in enumerate(valid_res):\n",
-    "        ans = int(resp[question].split()[0][1:])\n",
-    "        if bot <= ans <= top:\n",
-    "            correct_calibrations[i] += 1\n",
-    "print(min(correct_calibrations), max(correct_calibrations))\n",
-    "for c in correct_calibrations:\n",
-    "    print(c)\n",
+    "THRESHOLD = 0.5\n",
+    "reliable_responses = [r for r in responses if r.perc_calibrated_gradeable() >= THRESHOLD]\n",
+    "print(len(reliable_responses))\n",
+    "percs = sorted([r.perc_generated_gradeable() for r in reliable_responses], reverse=True)\n",
+    "print(percs)\n",
+    "print(mean(percs))\n",
+    "\n",
+    "# look at correlation between max grade and being accurate\n",
+    "# \n",
+    "\n",
+    "# print(sorted((r.max_gradeable() for r in responses), reverse=True))\n",
+    "# percs = [r.perc_calibrated_gradeable() for r in responses]\n",
+    "# print(sorted(percs, reverse=True))\n",
+    "# for resp in responses:\n",
+    "#     print(resp.perc_calibrated_gradeable())\n",
     "\n",
     "# got_v4 = []\n",
     "# for item in valid_res:\n",
