update survey understanding

--- a/user_study/parse_results.ipynb
+++ b/user_study/parse_results.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "from csv import DictReader\n",
+    "from survey_response import SurveyResponse\n",
     "\n",
     "def read_valid_results(path):\n",
     "    valid_res = []\n",
@@ -17,7 +18,11 @@
     "        for item in reader:\n",
     "            if item['Status'] != 'Survey Preview' and item['Q6'] != '': #and item['Screen 1'] == 'Yes' and item['Screen 2'] == '40':\n",
     "                valid_res.append(item)\n",
-    "    return valid_res"
+    "    return valid_res\n",
+    "\n",
+    "path = '/home/daniel/GeneticBoulders/user_study/Evolving MoonBoard Routes_February 20, 2023_20.45.csv'\n",
+    "valid_res = read_valid_results(path)\n",
+    "responses = [SurveyResponse(res) for res in valid_res]"
    ]
   },
   {
@@ -43,12 +48,7 @@
    "source": [
     "from statistics import mean\n",
     "from image_link_mapping import IMAGE_LINKS\n",
-    "from survey_response import SurveyResponse\n",
-    "path = '/home/daniel/GeneticBoulders/user_study/Evolving MoonBoard Routes_February 20, 2023_20.45.csv'\n",
-    "valid_res = read_valid_results(path)\n",
     "calibration_indices = [i for i, v in enumerate(IMAGE_LINKS) if 'calibrate' in v]\n",
-    "\n",
-    "responses = [SurveyResponse(res) for res in valid_res]\n",
     "\n",
     "THRESHOLD = 0.5\n",
     "reliable_responses = [r for r in responses if r.perc_calibrated_gradeable() >= THRESHOLD]\n",
@@ -75,6 +75,13 @@
     "# for r in got_v4:\n",
     "#     print(r)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
